# grpc_cpp

./: CMakeLists.txt  cliente.cpp  notas.grpc.pb.cc  notas.pb.cc  notas.pb.h  notas.proto  servidor  servidor.cpp
python/: cliente.py  notas.proto  notas_pb2_grpc.py  servidor.py
